--- a/index.html
+++ b/index.html
@@ -3,10 +3,100 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <header class="main-header">
+
+    	<div class="header-top">
+    	    <a class="logo main-header-logo" href="index.html">Техномарт</a>
+    	    <form action="" method="post">
+    		   <input type="search" name="search-form" value="Поиск:">
+    		   <button type="submit" name="submit-btn"></button>
+    	    </form>
+    	    <a class="bookmarks-and-cart" href="#"><img src="#" alt="Закладки" width="20" height="20">Закладки: <output>0</output></a>
+    	    <a class="bookmarks-and-cart" href="#"><img src="#" alt="Корзина" width="20" height="20">Корзина: <output>0</output></a>
+    	    <a class="order-button" href="order-form.html">Оформить заказ</a>
+        </div>
+
+        <div class="header-center">
+        	<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        	<div class="header-adress">
+        		<p>+7 (812) 555-05-55</p>
+        		<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        	</div>
+        	<a class="sign-in-button" href="sign-in.html"><img src="#" alt="Войти" width="20" height="20">Войти</a>
+        	<a class="sign-up-button" href="sign-up.html">Регистрация</a>
+        </div>
+
+        <nav class="main-nav">
+        	<ul class="cite-nav">
+        		<li><a href="index.html">Главная</a></li>
+        		<li><a href="about-us.html">Компания</a></li>
+        		<li><a href="catalog.html">Каталог</a></li>
+     		    <li><a href="news.html">Новости</a></li>
+     		    <li><a href="special.html">Спецпредложения</a></li>
+     		    <li><a href="delivery.html">Доставка</a></li>
+     		    <li><a href="contacts.html">Контакты</a></li>
+        	</ul>
+        </nav>
+
+    </header>
+
+    <main>
+    	<!-- to be continued -->
+    	<div class="main-about-us">
+    		<h2>Компания «Техномарт»</h2>
+    		<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.</p>
+    		<p>Мы можем доставить вам товар в самые отдалённые точки России! <br>Техномарт работает со многими транспортными компаниями: </p>
+    		<ul>
+    		    <li>Деловые линии</li>
+    		    <li>Авторейдинг</li>
+    		    <li>ЖелДорЭкспедиция</li>
+    	    </ul>
+    		<a class="main-about-us-button" href="about-us.html">Подробнее о компании</a>
+    	</div>
+    	<div class="main-contacts">
+    		<h2>Контакты</h2>
+    		<p>Вы можете забрать товар сами, заехав в наш офис:</p>
+    		<a class="main-contacts-button" href="send-mail.html">Заблудились? Напишите нам!</a>
+    	</div>
+    </main>
+
+    <footer class="main-footer">
+    	<div class="footer-top">
+    		<a class="logo main-footer-logo" href="index-html">Техномарт</a>
+    		<div class="footer-adress">
+        		<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        		<p>+7 (812) 555-05-55</p>
+        	</div>
+        	<ul class="footer-nav">
+        		<li><a href="about-us.html">Компания</a></li>
+     		    <li><a href="news.html">Новости</a></li>
+        		<li><a href="catalog.html">Каталог</a></li>
+     		    <li><a href="delivery.html">Доставка</a></li>
+     		    <li><a href="contacts.html">Контакты</a></li>
+     		</ul>
+     		<ul class="footer-nav">
+     		    <li><a href="materials.html">Материалы</a></li>
+     		    <li><a href="technics.html">Техника</a></li>
+     		    <li><a href="tools.html">Инструмент</a></li>
+     		    <li><a href="special.html">Спецпредложения</a></li>
+            </ul>
+    	</div>
+
+    	<div class="footer-bottom">
+    		<p class="footer-copyright">© 2010-2019 Компания «Техномарт» <br> Все права защищены</p>
+    	    <ul class="footer-social">
+     		    <li><a class="social-button" href="#">Вконтакте</a></li>
+     		    <li><a class="social-button" href="#">Фейсбук</a></li>
+     		    <li><a class="social-button" href="#">Инстаграм</a></li>
+     	    </ul>
+    		<p>Обратная связь: <br> <a href="send-mail.html">mail@htmlacademy.ru</a></p>
+    		<p>Разработано: <br> <a href="https://htmlacademy.ru">htmlacademy.ru</a></p>
+    	</div>
+    </footer>
 
   </body>
 </html>
