--- a/catalog.html
+++ b/catalog.html
@@ -3,79 +3,80 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
-    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
   	<header class="main-header">
-
     	<div class="header-top">
-    	    <a class="logo" href="index.html">Техномарт</a>
+    	    <a class="logo" href="index.html" title="Техномарт">Техномарт</a>
     	    <form action="" method="post" class="header__search-form">
-    		   <input type="search" name="search-form" class="header__search-form-input" value="Поиск:">
+    		   <input type="search" name="search-form" class="header__search-form-input" placeholder="Поиск:">
     		   <button type="submit" name="submit-btn" class="header__search-form-button"></button>
     	    </form>
-    	    <a class="header__user-button" href="#">
+    	    <a class="header__user-button" href="#" title="Закладки:">
                 <img src="#" alt="Закладки" width="20" height="20">
-                Закладки: 
+                <span class="header__user-button-text">Закладки: </span>
                 <output>0</output>
             </a>
-    	    <a class="header__user-button" href="#">
+    	    <a class="header__user-button" href="#" title="Корзина:">
                 <img src="#" alt="Корзина" width="20" height="20">
-                Корзина: 
+                <span class="header__user-button-text">Корзина: </span>
                 <output>10</output>
             </a>
-    	    <a class="header__order-button" href="order-form.html">Оформить заказ</a>
+    	    <a class="header__order-button" href="order-form.html" title="Оформить заказ">Оформить заказ</a>
         </div>
 
         <div class="header-center">
         	<p class="header_shop-main-title">Интернет-магазин строительных материалов и инструментов для ремонта</p>
         	<div class="header_adress">
-        		<p class="header_adress-tel-number">+7 (812) 555-05-55</p>
+        		<p class="header_adress-tel-number"><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
         		<p class="header_adress-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         	</div>
             <div class="header_user-info">
                 <div class="header_user-info-something">
-        	       <a class="header_profile-button" href="profile.html">Равшан Джамшутович</a>
-                   <a class="header_sign-out-button" href="sign-out.html">
+        	       <a class="header_profile-button" href="profile.html" title="Равшан Джамшутович">
+                    <img src="#" width="20" height="20" alt="Профиль пользователя">
+                    <span class="header_profile-button-name">Равшан Джамшутович</span>
+                   </a>
+                   <a class="header_sign-out-button" href="sign-out.html" title="Выйти">
                      <img src="#" width="20" height="20" alt="Выйти">
                    </a>
                 </div>
                 <ul class="header_user-info-list">
                    <li class="header__user-info-list-item">
-                      <a href="#">Мои заказы</a>
+                      <a href="#" title="Мои заказы">Мои заказы</a>
                    </li>
                    <li class="header__user-info-list-item">
-                      <a href="#">Личный кабинет</a>
+                      <a href="#" title="Личный кабинет">Личный кабинет</a>
                    </li>
                 </ul>
             </div>
         </div>
 
         <nav class="main-nav">
-        	<ul class="main-nav_list">
+            <ul class="main-nav_list">
         		<li class="main-nav_list-item">
-                    <a href="index.html" class="main-nav__list-item-link">Главная</a>
-                </li>
-        		<li class="main-nav_list-item">
-                    <a href="about-us.html" class="main-nav__list-item-link">Компания</a>
+                    <a href="index.html" class="main-nav__list-item-link" title="Главная">Главная</a>
                 </li>
         		<li class="main-nav_list-item">
-                    <a href="catalog.html" class="main-nav__list-item-link">Каталог</a>
+                    <a href="about-us.html" class="main-nav__list-item-link" title="Компания">Компания</a>
+                </li>
+        		<li class="main-nav_list-item">
+                    <a href="catalog.html" class="main-nav__list-item-link" title="Каталог">Каталог</a>
                 </li>
      		    <li class="main-nav_list-item">
-                    <a href="news.html" class="main-nav__list-item-link">Новости</a>
+                    <a href="news.html" class="main-nav__list-item-link" title="Новости">Новости</a>
                 </li>
      		    <li class="main-nav_list-item">
-                    <a href="special.html" class="main-nav__list-item-link">Спецпредложения</a>
+                    <a href="special.html" class="main-nav__list-item-link" title="Спецпредложения">Спецпредложения</a>
                 </li>
      		    <li class="main-nav_list-item">
-                    <a href="delivery.html" class="main-nav__list-item-link">Доставка</a>
+                    <a href="delivery.html" class="main-nav__list-item-link" title="Доставка">Доставка</a>
                 </li>
      		    <li class="main-nav_list-item">
-                    <a href="contacts.html" class="main-nav__list-item-link">Контакты</a>
+                    <a href="contacts.html" class="main-nav__list-item-link" title="Контакты">Контакты</a>
                 </li>
-        	</ul>
+            </ul>
         </nav>
     </header>
 
@@ -132,7 +133,7 @@
     		<ul class="catalog-list">
     			<li class="catalog-item">
     				<p class="catalog-item-title">
-                        <a href="catalog-item.html">Перфоратор BOSCH BFG 3000</a>
+                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
                     </p>
     				<p class="catalog-item-image">
                         <a href="catalog-item.html">
@@ -141,12 +142,12 @@
                     </p>
     				<p class="catalog-item-old-price">22500 P.</p>
     				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html">15500 P.</a>
+                        <a href="catalog-item.html" title="15500 P.">15500 P.</a>
                     </p>
     			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html">Перфоратор BOSCH BFG 6000</a>
+                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
                     </p>
      				<p class="catalog-item-image">
                         <a href="catalog-item.html">
@@ -154,12 +155,12 @@
                     </a></p>
      				<p class="catalog-item-old-price">30500 P.</p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html">25500 P.</a>
+                        <a href="catalog-item.html" title="25500 P.">25500 P.</a>
                     </p>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html">Перфоратор BOSCH BFG 2000</a>
+                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
                     </p>
      				<p class="catalog-item-image">
                         <a href="catalog-item.html">
@@ -167,12 +168,12 @@
                         </a>
                     </p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html">12500 P.</a>
+                        <a href="catalog-item.html" title="12500 P.">12500 P.</a>
                     </p>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html">Перфоратор BOSCH BFG 3000</a>
+                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
                     </p>
      				<p class="catalog-item-image">
                         <a href="catalog-item.html">
@@ -181,12 +182,12 @@
                     </p>
      				<p class="catalog-item-old-price">22500 P.</p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html">15500 P.</a>
+                        <a href="catalog-item.html" title="15500 P.">15500 P.</a>
                     </p>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html">Перфоратор BOSCH BFG 6000</a>
+                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
                     </p>
      				<p class="catalog-item-image">
                         <a href="catalog-item.html">
@@ -195,12 +196,12 @@
                     </p>
      				<p class="catalog-item-old-price">30500 P.</p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html">25500 P.</a>
+                        <a href="catalog-item.html" title="25500 P.">25500 P.</a>
                     </p>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html">Перфоратор BOSCH BFG 2000</a>
+                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
                     </p>
      				<p class="catalog-item-image">
                         <a href="catalog-item.html">
@@ -208,12 +209,12 @@
                         </a>
                     </p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html">12500 P.</a>
+                        <a href="catalog-item.html" title="12500 P.">12500 P.</a>
                     </p>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html">Перфоратор BOSCH BFG 3000</a>
+                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
                     </p>
      				<p class="catalog-item-image">
                         <a href="catalog-item.html">
@@ -222,12 +223,12 @@
                     </p>
      				<p class="catalog-item-old-price">22500 P.</p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html">15500 P.</a>
+                        <a href="catalog-item.html" title="15500 P.">15500 P.</a>
                     </p>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html">Перфоратор BOSCH BFG 6000</a>
+                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
                     </p>
      				<p class="catalog-item-image">
                         <a href="catalog-item.html">
@@ -236,24 +237,26 @@
                     </p>
      				<p class="catalog-item-old-price">30500 P.</p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html">25500 P.</a>
+                        <a href="catalog-item.html" title="25500 P.">25500 P.</a>
                     </p>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html">Перфоратор BOSCH BFG 2000</a>
+                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
                     </p>
      				<p class="catalog-item-image">
                         <a href="catalog-item.html">
                             <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
                         </a>
                     </p>
-     				<p class="catalog-item-new-price"><a href="catalog-item.html">12500 P.</a></p>
+     				<p class="catalog-item-new-price">
+                        <a href="catalog-item.html" title="12500 P.">12500 P.</a>
+                    </p>
      			</li>
     		</ul>
             <div class="catalog-user-form-hidden">
-                <a class="catalog-user-form-button" src="#">Купить</a>
-                <a class="catalog-user-form-button" src="#">В закладки</a>
+                <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
+                <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
             </div>
             <div class="catalog-new-flag">
                 <img src="img/new-flag.svg" width="20" height="20" alt="Новый товар">
@@ -263,41 +266,41 @@
 
     <footer class="main-footer">
     	<div class="footer-top">
-    		<a class="logo" href="index.html">Техномарт</a>
+    		<a class="logo" href="index.html" title="Техномарт">Техномарт</a>
             <ul class="footer-nav">
                 <li>
-                    <a href="about-us.html">Компания</a>
+                    <a href="about-us.html" title="Компания">Компания</a>
                 </li>
                 <li>
-                    <a href="news.html">Новости</a>
+                    <a href="news.html" title="Новости">Новости</a>
                 </li>
                 <li>
-                    <a href="catalog.html">Каталог</a>
+                    <a href="catalog.html" title="Каталог">Каталог</a>
                 </li>
                 <li>
-                    <a href="delivery.html">Доставка</a>
+                    <a href="delivery.html" title="Доставка">Доставка</a>
                 </li>
                 <li>
-                    <a href="contacts.html">Контакты</a>
+                    <a href="contacts.html" title="Контакты">Контакты</a>
                 </li>
             </ul>
     		<div class="footer-adress">
         		<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        		<p><a href="#">+7 (812) 555-05-55</a></p>
+        		<a href="tel:+78125550555">+7 (812) 555-05-55</a>
         	</div>
      		<ul class="footer-nav">
-     		    <li>
-                    <a href="materials.html">Материалы</a>
-                </li>
-     		    <li>
-                    <a href="technics.html">Техника</a>
-                </li>
-     		    <li>
-                    <a href="tools.html">Инструмент</a>
-                </li>
-     		    <li>
-                    <a href="special.html">Спецпредложения</a>
-                </li>
+               <li>
+                  <a href="materials.html" title="Материалы">Материалы</a>
+               </li>
+               <li>
+                  <a href="technics.html" title="Техника">Техника</a>
+               </li>
+               <li>
+                  <a href="tools.html" title="Инструмент">Инструмент</a>
+               </li>
+               <li>
+                  <a href="special.html" title="Спецпредложения">Спецпредложения</a>
+               </li>
             </ul>
     	</div>
 
@@ -306,22 +309,20 @@
             <p class="footer-copyright"> Все права защищены</p>
     	    <ul class="footer-social">
      		    <li>
-                    <a class="social-button" href="#">Вконтакте</a>
+                    <a class="social-button" href="#" title="Вконтакте">Вконтакте</a>
                 </li>
      		    <li>
-                    <a class="social-button" href="#">Фейсбук</a>
+                    <a class="social-button" href="#" title="Фейсбук">Фейсбук</a>
                 </li>
      		    <li>
-                    <a class="social-button" href="#">Инстаграм</a>
+                    <a class="social-button" href="#" title="Инстаграм">Инстаграм</a>
                 </li>
      	    </ul>
     		<div class="footer-bottom_academy">Обратная связь:
-                  
-                 <a href="send-mail.html">mail@htmlacademy.ru</a>
+                 <a class="footer-bottom_academy-link" href="send-mail.html" title="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
             </div>
     		<div class="footer-bottom_academy">Разработано: 
-                 
-                <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+                <a class="footer-bottom_academy-link" href="https://htmlacademy.ru" title="htmlacademy.ru">htmlacademy.ru</a>
             </div>
     	</div>
     </footer>
