Основное задание: готовим графику личного проекта

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 
     <header class="main-header">
     	<div class="header-top">
-    	    <a class="logo" href="index.html" title="Техномарт">Техномарт</a>
-    	    <form action="" method="post" class="header__search-form">
+    	    <a class="logo" href="index.html" title="Техномарт"><img src="img/logo.svg" width="111" height="18" alt="Техномарт"></a>
+    	    <form action="/" method="post" class="header__search-form">
     		   <input type="search" name="search-form" class="header__search-form-input" placeholder="Поиск:">
            <button type="submit" name="submit-btn" class="header__search-form-button"></button>
     	    </form>
     	    <a class="header__user-button" href="#" title="Закладки">
-            <img src="#" alt="Закладки" width="20" height="20">
+            <img src="img/icon-bookmark.svg" alt="Закладки" width="15" height="15">
             <span class="header__user-button-text">Закладки: </span>
             <output>0</output>
           </a>
           <a class="header__user-button" href="#" title="Корзина">
-            <img src="#" alt="Корзина" width="20" height="20">
+            <img src="img/cart-icon.svg" alt="Корзина" width="15" height="15">
             <span class="header__user-button-text">Корзина: </span>
             <output>0</output>
           </a>
@@ -29,10 +29,10 @@
         <div class="header-center">
         	<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         	<div class="header_adress">
-            <p class="header_adress-tel-number"><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+            <a class="header_adress-tel-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p class="header_adress-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-        	<a class="sign-in-button" href="sign-in.html" title="Войти"><img src="#" alt="Войти" width="20" height="20">Войти</a>
+        	<a class="sign-in-button" href="sign-in.html" title="Войти"><img src="img/icon-login.svg" alt="Войти" width="20" height="17">Войти</a>
         	<a class="sign-up-button" href="sign-up.html" title="Регистрация">Регистрация</a>
         </div>
 
@@ -80,6 +80,9 @@
     	  <div class="main-contacts">
     		  <h2 class="main_information-title">Контакты</h2>
     		  <p class="main_information-paragraph">Вы можете забрать товар сами, заехав в наш офис:</p>
+              <a class="main_information-map-small" href="#" title="Карта">
+                  <img src="img/map-small.jpg" width="300" height="158" alt="Карта">
+              </a>
     		  <a class="main_information-button" href="send-mail.html" title="Заблудились? Напишите нам!">Заблудились? Напишите нам!</a>
     	  </div>
       </section>
@@ -87,7 +90,7 @@
 
     <footer class="main-footer">
       <div class="footer-top">
-        <a class="logo" href="index.html" title="Техномарт">Техномарт</a>
+        <a class="logo" href="index.html" title="Техномарт"><img src="img/logo.svg" width="111" height="18" alt="Техномарт"></a>
             <ul class="footer-nav">
                 <li>
                     <a href="about-us.html" title="Компания">Компания</a>
@@ -130,21 +133,21 @@
             <p class="footer-copyright"> Все права защищены</p>
           <ul class="footer-social">
             <li>
-                    <a class="social-button" href="#" title="Вконтакте">Вконтакте</a>
-                </li>
+                <a class="social-button" href="#" title="Вконтакте">Вконтакте</a>
+            </li>
             <li>
-                    <a class="social-button" href="#" title="Фейсбук">Фейсбук</a>
-                </li>
+                <a class="social-button" href="#" title="Фейсбук">Фейсбук</a>
+            </li>
             <li>
-                    <a class="social-button" href="#" title="Инстаграм">Инстаграм</a>
-                </li>
+                <a class="social-button" href="#" title="Инстаграм">Инстаграм</a>
+            </li>
           </ul>
         <div class="footer-bottom_academy">Обратная связь:
-                 <a class="footer-bottom_academy-link" href="send-mail.html" title="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-            </div>
+            <a class="footer-bottom_academy-link" href="send-mail.html" title="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </div>
         <div class="footer-bottom_academy">Разработано: 
-                <a class="footer-bottom_academy-link" href="https://htmlacademy.ru" title="htmlacademy.ru">htmlacademy.ru</a>
-            </div>
+            <a class="footer-bottom_academy-link" href="https://htmlacademy.ru" title="htmlacademy.ru">htmlacademy.ru</a>
+        </div>
       </div>
     </footer>
 
