--- a/catalog.html
+++ b/catalog.html
@@ -8,18 +8,18 @@
 
   	<header class="main-header">
     	<div class="header-top">
-    	    <a class="logo" href="index.html" title="Техномарт">Техномарт</a>
-    	    <form action="" method="post" class="header__search-form">
+    	    <a class="logo" href="index.html" title="Техномарт"><img src="img/logo.svg" width="111" height="18" alt="Техномарт"></a>
+    	    <form action="/" method="post" class="header__search-form">
     		   <input type="search" name="search-form" class="header__search-form-input" placeholder="Поиск:">
     		   <button type="submit" name="submit-btn" class="header__search-form-button"></button>
     	    </form>
     	    <a class="header__user-button" href="#" title="Закладки:">
-                <img src="#" alt="Закладки" width="20" height="20">
+                <img src="img/icon-bookmark.svg" alt="Закладки" width="15" height="15">
                 <span class="header__user-button-text">Закладки: </span>
                 <output>0</output>
             </a>
     	    <a class="header__user-button" href="#" title="Корзина:">
-                <img src="#" alt="Корзина" width="20" height="20">
+                <img src="img/cart-icon.svg" alt="Корзина" width="15" height="15">
                 <span class="header__user-button-text">Корзина: </span>
                 <output>10</output>
             </a>
@@ -29,17 +29,17 @@
         <div class="header-center">
         	<p class="header_shop-main-title">Интернет-магазин строительных материалов и инструментов для ремонта</p>
         	<div class="header_adress">
-        		<p class="header_adress-tel-number"><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+        		<a class="header_adress-tel-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
         		<p class="header_adress-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         	</div>
             <div class="header_user-info">
                 <div class="header_user-info-something">
         	       <a class="header_profile-button" href="profile.html" title="Равшан Джамшутович">
-                    <img src="#" width="20" height="20" alt="Профиль пользователя">
+                    <img src="img/icon-user.svg" width="20" height="18" alt="Профиль пользователя">
                     <span class="header_profile-button-name">Равшан Джамшутович</span>
                    </a>
                    <a class="header_sign-out-button" href="sign-out.html" title="Выйти">
-                     <img src="#" width="20" height="20" alt="Выйти">
+                     <img src="img/icon-logout.svg" width="20" height="17" alt="Выйти">
                    </a>
                 </div>
                 <ul class="header_user-info-list">
@@ -83,21 +83,21 @@
     <main class="container">
     	<ul class="breadcrumps">
     		<li class="breadcrumbs__item">
-                <a href="index.html" class="breadcrumbs__item-link">
-                    <img src="#" width="20" height="20" alt="Главная">
+                <a href="index.html" class="breadcrumbs__item-link" title="Главная">
+                    <img src="img/icon-home.svg" width="14" height="12" alt="Главная">
                 </a>
             </li>
     		<li class="breadcrumbs__item">
-                <a href="#" class="breadcrumbs__item-link">Каталог</a>
+                <a href="#" class="breadcrumbs__item-link" title="Каталог">Каталог</a>
             </li>
     		<li class="breadcrumbs__item">
-                <a href="#" class="breadcrumbs__item-link">Инструмент</a>
+                <a href="#" class="breadcrumbs__item-link" title="Инструмент">Инструмент</a>
             </li>
     		<li class="breadcrumps-current breadcrumbs__item">Перфораторы</li>
     	</ul>
     	<h1 class="page-title">Перфораторы</h1>
 
-    	<form class="catalog-filter">
+    	<form action="/" method="post" class="catalog-filter">
     		<h2 class="catalog-filter_title">Фильтр</h2>
     		<!-- раздел с ценой -->
     		<h3 class="catalog-filter_section-title">Производители:</h3>
@@ -144,6 +144,10 @@
     				<p class="catalog-item-new-price">
                         <a href="catalog-item.html" title="15500 P.">15500 P.</a>
                     </p>
+                    <div class="catalog-user-form-hidden">
+                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                    </div>
     			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
@@ -157,6 +161,10 @@
      				<p class="catalog-item-new-price">
                         <a href="catalog-item.html" title="25500 P.">25500 P.</a>
                     </p>
+                    <div class="catalog-user-form-hidden">
+                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                    </div>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
@@ -170,6 +178,10 @@
      				<p class="catalog-item-new-price">
                         <a href="catalog-item.html" title="12500 P.">12500 P.</a>
                     </p>
+                    <div class="catalog-user-form-hidden">
+                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                    </div>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
@@ -184,6 +196,10 @@
      				<p class="catalog-item-new-price">
                         <a href="catalog-item.html" title="15500 P.">15500 P.</a>
                     </p>
+                    <div class="catalog-user-form-hidden">
+                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                    </div>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
@@ -198,6 +214,10 @@
      				<p class="catalog-item-new-price">
                         <a href="catalog-item.html" title="25500 P.">25500 P.</a>
                     </p>
+                    <div class="catalog-user-form-hidden">
+                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                    </div>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
@@ -211,6 +231,10 @@
      				<p class="catalog-item-new-price">
                         <a href="catalog-item.html" title="12500 P.">12500 P.</a>
                     </p>
+                    <div class="catalog-user-form-hidden">
+                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                    </div>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
@@ -225,6 +249,10 @@
      				<p class="catalog-item-new-price">
                         <a href="catalog-item.html" title="15500 P.">15500 P.</a>
                     </p>
+                    <div class="catalog-user-form-hidden">
+                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                    </div>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
@@ -239,6 +267,10 @@
      				<p class="catalog-item-new-price">
                         <a href="catalog-item.html" title="25500 P.">25500 P.</a>
                     </p>
+                    <div class="catalog-user-form-hidden">
+                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                    </div>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
@@ -252,12 +284,12 @@
      				<p class="catalog-item-new-price">
                         <a href="catalog-item.html" title="12500 P.">12500 P.</a>
                     </p>
+                    <div class="catalog-user-form-hidden">
+                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                    </div>
      			</li>
     		</ul>
-            <div class="catalog-user-form-hidden">
-                <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
-                <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
-            </div>
             <div class="catalog-new-flag">
                 <img src="img/new-flag.svg" width="20" height="20" alt="Новый товар">
             </div>
@@ -266,7 +298,7 @@
 
     <footer class="main-footer">
     	<div class="footer-top">
-    		<a class="logo" href="index.html" title="Техномарт">Техномарт</a>
+    		<a class="logo" href="index.html" title="Техномарт"><img src="img/logo.svg" width="111" height="18" alt="Техномарт"></a>
             <ul class="footer-nav">
                 <li>
                     <a href="about-us.html" title="Компания">Компания</a>
