--- a/index.html
+++ b/index.html
@@ -245,34 +245,34 @@
               <li class="main_service-list-item">
                   <label for="delivery-slide" class="main_service-label">Доставка</label>
                   <input type="radio" name="slider2" id="delivery-slide">
+                  <div class="main_service-slide">
+                    <h3>Доставка</h3>
+                    <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
+                      <br>Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+                    <img src="img/delivery.png" width="468" height="261" alt="Доставка">
+                  </div>
               </li>
               <li class="main_service-list-item">
                   <label for="guarantee-slide" class="main_service-label">Гарантия</label>
                   <input type="radio" name="slider2" id="guarantee-slide">
+                  <div class="main_service-slide">
+                    <h3>Гарантия</h3>
+                    <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
+                      <br>Дом уж восстановите как-нибудь сами.</p>
+                    <img src="img/guarantee.png" width="389" height="283" alt="Гарантия">
+                  </div>
               </li>
               <li class="main_service-list-item">
                   <label for="loan-slide" class="main_service-label">Кредит</label>
                   <input type="radio" name="slider2" id="loan-slide">
+                  <div class="main_service-slide">
+                    <h3>Кредит</h3>
+                    <p>Залезть в долговую яму стало проще! 
+                      <br>Кредитные консультанты придут вам на помощь.</p>
+                    <img src="img/loan.png" width="465" height="285" alt="Кредит">
+                  </div>
               </li>
           </ul>
-          <div class="main_service-delivery-slide">
-            <h3>Доставка</h3>
-            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
-              <br>Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-            <img src="img/delivery.png" width="468" height="261" alt="Доставка">
-          </div>
-          <div class="main_service-guarantee-slide">
-            <h3>Гарантия</h3>
-            <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
-              <br>Дом уж восстановите как-нибудь сами.</p>
-            <img src="img/guarantee.png" width="389" height="283" alt="Гарантия">
-          </div>
-          <div class="main_service-loan-slide">
-            <h3>Кредит</h3>
-            <p>Залезть в долговую яму стало проще! 
-              <br>Кредитные консультанты придут вам на помощь.</p>
-            <img src="img/loan.png" width="465" height="285" alt="Кредит">
-          </div>
       </section>
 
       <section class="main_information">
