Отредактирована разметка элементов каталога, добавлены классы, отредактирован слайдер

--- a/index.html
+++ b/index.html
@@ -116,70 +116,47 @@
         </div>
         <ul class="main_popular-products-list">
             <li class="catalog-item">
-                <p class="catalog-item-title">
-                     <a href="catalog-item.html" title="Перфоратор BOSCH BFG 9000">Перфоратор BOSCH BFG 9000</a>
-                </p>
-                <p class="catalog-item-image">
-                     <a href="catalog-item.html">
-                        <img src="img/product-3.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 9000">
-                    </a>
-                </p>
+                <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 9000">Перфоратор BOSCH BFG 9000</a>
+                <a href="catalog-item.html" class="catalog-item-image">
+                    <img src="img/product-3.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 9000">
+                </a>
                 <p class="catalog-item-old-price">32500 P.</p>
-                <p class="catalog-item-new-price">
-                    <a href="catalog-item.html" title="25500 P.">25500 P.</a>
-                </p>
+                <a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
                 <div class="catalog-user-form-hidden">
                     <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
                     <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
                 </div>
             </li>
             <li class="catalog-item">
-                <p class="catalog-item-title">
-                     <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
-                </p>
-                <p class="catalog-item-image">
-                     <a href="catalog-item.html">
-                        <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-                    </a>
-                </p>
+                <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
+                <a href="catalog-item.html" class="catalog-item-image">
+                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+                </a>
                 <p class="catalog-item-old-price">22500 P.</p>
-                <p class="catalog-item-new-price">
-                    <a href="catalog-item.html" title="15500 P.">15500 P.</a>
-                </p>
+                <a href="catalog-item.html" class="catalog-item-new-price" title="15500 P.">15500 P.</a>
                 <div class="catalog-user-form-hidden">
                     <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
                     <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
                 </div>
             </li>
             <li class="catalog-item">
-                <p class="catalog-item-title">
-                    <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
-                </p>
-                <p class="catalog-item-image">
-                    <a href="catalog-item.html">
+                <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
+                <a href="catalog-item.html" class="catalog-item-image">
                     <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-                </a></p>
+                </a>
                 <p class="catalog-item-old-price">30500 P.</p>
-                <p class="catalog-item-new-price">
-                    <a href="catalog-item.html" title="25500 P.">25500 P.</a>
-                </p>
+                <a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
                 <div class="catalog-user-form-hidden">
                     <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
                     <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
                 </div>
             </li>
             <li class="catalog-item">
-                <p class="catalog-item-title">
-                    <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
-                </p>
-                <p class="catalog-item-image">
-                    <a href="catalog-item.html">
-                        <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-                    </a>
-                </p>
-                <p class="catalog-item-new-price">
-                    <a href="catalog-item.html" title="12500 P.">12500 P.</a>
-                </p>
+                <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
+                <a href="catalog-item.html" class="catalog-item-image">
+                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+                </a>
+                <a href="catalog-item.html" class="catalog-item-new-price" title="12500 P.">12500 P.</a>
                 <div class="catalog-user-form-hidden">
                     <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
                     <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
@@ -196,42 +173,42 @@
         </div>
         <ul class="main_popular-brands-list">
             <li class="brands-item">
-                <a href="#" title="Bosch">
+                <a href="#" title="Bosch" class="brands-link">
                     <img src="img/bosch.jpg" width="126" height="37" alt="Bosch">
                 </a>
             </li>
             <li class="brands-item">
-                <a href="#" title="Makita">
+                <a href="#" title="Makita" class="brands-link">
                     <img src="img/makita.jpg" width="123" height="40" alt="Makita">
                 </a>
             </li>
             <li class="brands-item">
-                <a href="#" title="De-walt">
+                <a href="#" title="De-walt" class="brands-link">
                     <img src="img/de-walt.jpg" width="146" height="44" alt="De-walt">
                 </a>
             </li>
             <li class="brands-item">
-                <a href="#" title="Интерскол">
+                <a href="#" title="Интерскол" class="brands-link">
                     <img src="img/interskol.jpg" width="200" height="88" alt="Интерскол">
                 </a>
             </li>
             <li class="brands-item">
-                <a href="#" title="Hitachi">
+                <a href="#" title="Hitachi" class="brands-link">
                     <img src="img/hitachi.jpg" width="169" height="31" alt="Hitachi">
                 </a>
             </li>
             <li class="brands-item">
-                <a href="#" title="LG">
+                <a href="#" title="LG" class="brands-link">
                     <img src="img/lg.jpg" width="121" height="73" alt="LG">
                 </a>
             </li>
             <li class="brands-item">
-                <a href="#" title="AEG">
+                <a href="#" title="AEG" class="brands-link">
                     <img src="img/aeg.jpg" width="151" height="96" alt="AEG">
                 </a>
             </li>
             <li class="brands-item">
-                <a href="#" title="Metabo">
+                <a href="#" title="Metabo" class="brands-link">
                     <img src="img/metabo.jpg" width="204" height="69" alt="Metabo">
                 </a>
             </li>
@@ -243,8 +220,8 @@
           <p class="main_service-description">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <ul class="main_service-list">
               <li class="main_service-list-item">
-                  <label for="delivery-slide" class="main_service-label">Доставка</label>
                   <input type="radio" name="slider2" id="delivery-slide">
+                  <label for="delivery-slide" class="main_service-label">Доставка</label>
                   <div class="main_service-slide">
                     <h3>Доставка</h3>
                     <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
@@ -253,8 +230,8 @@
                   </div>
               </li>
               <li class="main_service-list-item">
-                  <label for="guarantee-slide" class="main_service-label">Гарантия</label>
                   <input type="radio" name="slider2" id="guarantee-slide">
+                  <label for="guarantee-slide" class="main_service-label">Гарантия</label>
                   <div class="main_service-slide">
                     <h3>Гарантия</h3>
                     <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
@@ -263,8 +240,8 @@
                   </div>
               </li>
               <li class="main_service-list-item">
-                  <label for="loan-slide" class="main_service-label">Кредит</label>
                   <input type="radio" name="slider2" id="loan-slide">
+                  <label for="loan-slide" class="main_service-label">Кредит</label>
                   <div class="main_service-slide">
                     <h3>Кредит</h3>
                     <p>Залезть в долговую яму стало проще! 
