--- a/catalog.html
+++ b/catalog.html
@@ -149,52 +149,35 @@
             </div>
     		<ul class="catalog-list">
     			<li class="catalog-item">
-    				<p class="catalog-item-title">
-                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
-            </p>
-    				<p class="catalog-item-image">
-                <a href="catalog-item.html">
-                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-                </a>
-            </p>
+    				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
+    				<a href="catalog-item.html" class="catalog-item-image">
+                <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+            </a>
     				<p class="catalog-item-old-price">22500 P.</p>
-    				<p class="catalog-item-new-price">
-                <a href="catalog-item.html" title="15500 P.">15500 P.</a>
-            </p>
+    				<a href="catalog-item.html" class="catalog-item-new-price" title="15500 P.">15500 P.</a>
             <div class="catalog-user-form-hidden">
               <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
             </div>
     			</li>
      			<li class="catalog-item">
-     				<p class="catalog-item-title">
-                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
-            </p>
-     				<p class="catalog-item-image">
-                <a href="catalog-item.html">
+     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
+     				<a href="catalog-item.html" class="catalog-item-image">
                 <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-            </a></p>
+            </a>
      				<p class="catalog-item-old-price">30500 P.</p>
-     				<p class="catalog-item-new-price">
-                <a href="catalog-item.html" title="25500 P.">25500 P.</a>
-            </p>
+     				<a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
             <div class="catalog-user-form-hidden">
               <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
               <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
             </div>
      			</li>
      			<li class="catalog-item">
-     				<p class="catalog-item-title">
-                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
-            </p>
-     				<p class="catalog-item-image">
-                <a href="catalog-item.html">
-                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-                </a>
-            </p>
-     				<p class="catalog-item-new-price">
-               <a href="catalog-item.html" title="12500 P.">12500 P.</a>
-            </p>
+     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
+     				<a href="catalog-item.html" class="catalog-item-image">
+                <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+            </a>
+     				<a href="catalog-item.html" class="catalog-item-new-price" title="12500 P.">12500 P.</a>
            <div class="catalog-user-form-hidden">
              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
@@ -202,72 +185,24 @@
            <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
-     				<p class="catalog-item-title">
-                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
-            </p>
-     				<p class="catalog-item-image">
-                <a href="catalog-item.html">
-                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-                </a>
-            </p>
+     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
+     				<a href="catalog-item.html" class="catalog-item-image">
+                <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+            </a>
      				<p class="catalog-item-old-price">22500 P.</p>
-     				<p class="catalog-item-new-price">
-                <a href="catalog-item.html" title="15500 P.">15500 P.</a>
-            </p>
+     				<a href="catalog-item.html" class="catalog-item-new-price" title="15500 P.">15500 P.</a>
             <div class="catalog-user-form-hidden">
               <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
               <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
             </div>
      			</li>
      			<li class="catalog-item">
-     				<p class="catalog-item-title">
-                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
-            </p>
-     				<p class="catalog-item-image">
-                <a href="catalog-item.html">
-                    <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-                </a>
-            </p>
+     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
+     				<a href="catalog-item.html" class="catalog-item-image">
+                <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+            </a>
      				<p class="catalog-item-old-price">30500 P.</p>
-     				<p class="catalog-item-new-price">
-                <a href="catalog-item.html" title="25500 P.">25500 P.</a>
-            </p>
-            <div class="catalog-user-form-hidden">
-              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
-            </div>
-            <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
-     			</li>
-     			<li class="catalog-item">
-     				<p class="catalog-item-title">
-                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
-            </p>
-     				<p class="catalog-item-image">
-                <a href="catalog-item.html">
-                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-                </a>
-            </p>
-     				<p class="catalog-item-new-price">
-                <a href="catalog-item.html" title="12500 P.">12500 P.</a>
-            </p>
-            <div class="catalog-user-form-hidden">
-              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
-            </div>
-     			</li>
-     			<li class="catalog-item">
-     				<p class="catalog-item-title">
-                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
-            </p>
-     				<p class="catalog-item-image">
-                <a href="catalog-item.html">
-                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-                </a>
-            </p>
-     				<p class="catalog-item-old-price">22500 P.</p>
-     				<p class="catalog-item-new-price">
-                <a href="catalog-item.html" title="15500 P.">15500 P.</a>
-            </p>
+     				<a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
             <div class="catalog-user-form-hidden">
               <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
               <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
@@ -275,35 +210,47 @@
             <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
-     				<p class="catalog-item-title">
-                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
-            </p>
-     				<p class="catalog-item-image">
-                <a href="catalog-item.html">
-                    <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-                </a>
-            </p>
-     				<p class="catalog-item-old-price">30500 P.</p>
-     				<p class="catalog-item-new-price">
-                <a href="catalog-item.html" title="25500 P.">25500 P.</a>
-            </p>
+     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
+     				<a href="catalog-item.html" class="catalog-item-image">
+                <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+            </a>
+     				<a href="catalog-item.html" class="catalog-item-new-price" title="12500 P.">12500 P.</a>
             <div class="catalog-user-form-hidden">
               <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
               <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
             </div>
      			</li>
      			<li class="catalog-item">
-     				<p class="catalog-item-title">
-                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
-            </p>
-     				<p class="catalog-item-image">
-                <a href="catalog-item.html">
-                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-                </a>
-            </p>
-     				<p class="catalog-item-new-price">
-                <a href="catalog-item.html" title="12500 P.">12500 P.</a>
-            </p>
+     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
+     				<a href="catalog-item.html" class="catalog-item-image">
+                <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+            </a>
+     				<p class="catalog-item-old-price">22500 P.</p>
+     				<a href="catalog-item.html" class="catalog-item-new-price" title="15500 P.">15500 P.</a>
+            <div class="catalog-user-form-hidden">
+              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+            </div>
+            <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
+     			</li>
+     			<li class="catalog-item">
+     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
+     				<a href="catalog-item.html" class="catalog-item-image">
+                <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+            </a>
+     				<p class="catalog-item-old-price">30500 P.</p>
+     				<a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
+            <div class="catalog-user-form-hidden">
+              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+            </div>
+     			</li>
+     			<li class="catalog-item">
+     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
+     				<a href="catalog-item.html" class="catalog-item-image">
+                <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+            </a>
+     				<a href="catalog-item.html" class="catalog-item-new-price" title="12500 P.">12500 P.</a>
             <div class="catalog-user-form-hidden">
               <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
               <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
