--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
       </div>
     </footer>
 
-    <section class="modal modal-mail">
+    <section class="modal modal-mail" id="mailform_index">
       <form class="mail-form" action="/" method="post">
         <div class="mail-form-part">
           <label class="mail-form-label" for="mail-form-name">Ваше имя:</label>
@@ -356,7 +356,7 @@
       <button class="close-button" type="button">Закрыть</button>
     </section>
 
-    <section class="modal modal-map">
+    <section class="modal modal-map" id="map_index">
       <img src="img/map.jpg" width="940" height="446" alt="Офис компании знаходится по адресу ул. Большая Конюшенная 19/8, город Санкт-Петербург">
       <button class="close-button" type="button">Закрыть</button>
     </section>
